<resources>
    <string name="app_name">ExmapleKotlinApp</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="avatar" translatable="false">Edit Avatar</string>
    <string name="login" translatable="false">login</string>
    <string name="password" translatable="false">password</string>
    <string name="name" translatable="false">Имя</string>
    <string name="name2" translatable="false">Фамилия</string>
    <string name="name3" translatable="false">Отчество</string>
    <string name="done" translatable="false">Done</string>
</resources>